--- a/Proyecto SPA/libreriabackend/src/main/resources/application.properties
+++ b/Proyecto SPA/libreriabackend/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.jpa.database=POSTGRESQL
+spring.sql.init.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/libreriaSPA
+spring.datasource.username=postgres
+spring.datasource.password=grupojdd
+spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
